fix load issue for library history + user history

--- a/data/interfaces/default/history.html
+++ b/data/interfaces/default/history.html
@@ -16,7 +16,7 @@
     </div>
     % endif
     <div class='table-card-header'>
-        <div class="header-bar">
+        <div class="header-bar" style="margin-top: 2.4rem;">
             <span><i class="fa fa-history"></i> History</span>
         </div>
         <div id="history-option-container" class="container">
